mule-user-guide/v/3.3/using-interceptors.adoc
= Using Interceptors

Mule ESB interceptors are useful for attaching behaviors to multiple components. The interceptor pattern is often referred to as practical AOP (Aspect Oriented Programming), as it allows the developer to intercept processing on an object and potentially alter the processing and outcome. (See also http://static.springframework.org/spring/docs/2.0.x/reference/aop.html[Spring AOP]). Interceptors are very useful for attaching behavior such as profiling and permission and security checks to your components.

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/interceptor/AbstractEnvelopeInterceptor.html[AbstractEnvelopeInterceptor]

is an envelope filter that will execute before and after the component is invoked. Good for logging and profiling.

== Interceptor Event Flow

The following shows an example interceptor stack and the event flow.

image:interceptor.png[interceptor]

== Writing Interceptors

If you want to intercept a message flow to a component on the inbound message flow, you should implement the Interceptor interface. It has a single method:

[source, code, linenums]
----
MuleEvent process(MuleEvent event);
----

The `event` parameter contains the current message. Developers can extract the current `MuleMessage` from the message and manipulate it as needed. The `process` method must return a `MuleMessage` that will be passed on to the component (or to the next interceptor in the chain).

The http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/interceptor/AbstractEnvelopeInterceptor.html[AbstractEnvelopeInterceptor] is an envelope filter that executes before and after the component is invoked. Good for logging and profiling. works in the same way, except that it exposes two methods that get invoked before and after the event processing:

[source, code, linenums]
----
MuleEvent before(MuleEvent event) throws MuleException;
 
MuleEvent after(MuleEvent event) throws MuleException;
----

== Configuring Interceptors

Interceptors can be configured on your components as follows:

[source, xml, linenums]
----
<flow name="MyService">
    <custom-interceptor class="org.my.CustomInterceptor"/>
    <logging-interceptor/>
    <interceptor-stack ref="testInterceptorStack"/>
    <timer-interceptor/>
    <prototype-object class="org.my.ComponentImpl"/>
</flow>
----

[WARNING]
When you configure interceptors, you must specify the object factory explicitly (in this example, `<prototype-object>`) instead of using the `<component class>` shortcut.

You can also define _interceptor stacks_, which are one or more interceptors that can be referenced using a logical name. To use an interceptor stack, you must first configure it in the global section of the Mule XML configuration file (above the `<model>` element):

[source, xml, linenums]
----
<interceptor-stack name="default">
    <custom-interceptor class="org.my.CustomInterceptor"/>
    <logging-interceptor/>
</interceptor-stack>
----

You can configure multiple `<interceptor>` elements on your components, and you can mix using built-in interceptors, custom interceptors, and references to interceptor stacks.

== Interceptor Configuration Reference

== Logging interceptor

The logging interceptor (ported from 1.x).

=== Attributes of <logging-interceptor...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|===
|Name |Type |Required |Default |Description
|===

=== Child Elements of <logging-interceptor...>

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Name |Cardinality |Description
|===

== Custom interceptor

A user-implemented interceptor.

=== Attributes of <custom-interceptor...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|===
|Name |Type |Required |Default |Description
|class |class name |yes |  |An implementation of the Interceptor interface.
|===

=== Child Elements of <custom-interceptor...>

[width="100%",cols="34%,33%,33%",options="header",]
|=======
|Name |Cardinality |Description
|spring:property |0..* |Spring-style property element for custom configuration.
|=======

== Interceptor stack

=== Attributes of <interceptor-stack...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|===
|Name |Type |Required |Default |Description
|name |name |yes |  |The name used to identify this interceptor stack.
|===

=== Child Elements of <interceptor-stack...>

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Name |Cardinality |Description
|abstract-interceptor |0..1 |A placeholder for an interceptor element.
|===

== Interceptor stack

A reference to a stack of intereceptors defined globally.

=== Attributes of <interceptor-stack...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|====
|Name |Type |Required |Default |Description
|ref |string |yes |  |The name of the interceptor stack to use.
|====

=== Child Elements of <interceptor-stack...>

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Name |Cardinality |Description
|===

== Timer interceptor

The timer interceptor (ported from 1.x).

=== Attributes of <timer-interceptor...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|===
|Name |Type |Required |Default |Description
|===

=== Child Elements of <timer-interceptor...>

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Name |Cardinality |Description
|===
